<resources>
    <string name="app_name">Wallpapers</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="favourite">Favourite</string>
    <string name="more">Settings</string>
    <string name="appId">ehSd3jOVMSdp1c1w0Ocg5lDmmVyKhQG1zvGTAyKu</string>
    <string name="appKey">GbLdV1KE8vz3SOmingRqwq5gFeX5r5uks8jnVzPX</string>
    <string name="image">Image</string>
    <string name="download">Download</string>
    <string name="setWallpaper">Apply</string>
    <string name="share">Share</string>
    <string name="save_location">Wallpapers Saved Location :</string>
    <string name="storage_download_fff_wallpapers">Storage/Download/Wallpapers/</string>
    <string name="rate_us">Rate Us :</string>
    <string name="rate_our_app">Rate our app</string>
    <string name="share_">Share :</string>
    <string name="share_our_app_with_friends">Share our app with friends</string>
    <string name="app_privacy_policy">App Privacy Policy</string>
    <string name="privacy_policy">Privacy Policy :</string>
    <string name="ad">Ad</string>

<!--    <string name="admob_interstitial">ca-app-pub-3940256099942544/1033173712</string>-->
<!--    <string name="admob_native">ca-app-pub-3940256099942544/2247696110</string>-->
<!--    <string name="admob_open">ca-app-pub-3940256099942544/3419835294</string>-->
<!--    <string name="admob_native_banner">ca-app-pub-3940256099942544/6300978111</string>-->


    <string name="admob_interstitial">ca-app-pub-3784717186068608/9360129512</string>
    <string name="admob_native">ca-app-pub-3784717186068608/2441042534</string>
    <string name="admob_open">ca-app-pub-3784717186068608/7855476159</string>
    <string name="admob_native_banner">ca-app-pub-3784717186068608/9551701209</string>
    <string name="start">Start</string>

</resources>