<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>

        <import type="android.view.View" />

        <variable
            name="isFavourite"
            type="Boolean" />
    </data>

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/root"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.ImageActivity">


        <ImageView
            android:id="@+id/imgWall"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <ImageView
            android:id="@+id/imgBack"
            android:layout_width="@dimen/_25sdp"
            android:layout_height="@dimen/_25sdp"
            android:layout_marginLeft="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:background="@drawable/circle"
            android:padding="@dimen/_5sdp"
            android:src="@drawable/ic_baseline_arrow_back_24" />


        <ImageView
            android:layout_width="match_parent"
            android:layout_height="@dimen/_50sdp"
            android:background="@drawable/dark_shade" />

        <ImageView
            android:id="@+id/imgFavourite"
            android:layout_width="@dimen/_40sdp"
            android:layout_height="@dimen/_40sdp"
            android:layout_alignParentRight="true"
            android:layout_marginRight="@dimen/_3sdp"
            android:padding="@dimen/_12sdp"
            android:src="@{isFavourite ? @drawable/ic_favourite_fill : @drawable/ic_favourite_empty}" />


        <LinearLayout
            android:id="@+id/lnbottom"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_43sdp"
            android:layout_alignParentBottom="true"
            android:layout_marginLeft="@dimen/_10sdp"
            android:layout_marginRight="@dimen/_10sdp"
            android:layout_marginBottom="@dimen/_10sdp"
            android:background="@drawable/bottom_layout_bg"
            android:weightSum="3">

            <LinearLayout
                android:id="@+id/lnDownload"
                style="@style/SelectableItemBackground"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="@dimen/_18sdp"
                    android:layout_height="@dimen/_18sdp"
                    android:src="@drawable/ic_baseline_save_alt_24" />

                <com.example.wallpapersapp.widgets.CustomRegularTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/download"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_10ssp" />


            </LinearLayout>

            <LinearLayout
                android:id="@+id/lnApply"
                style="@style/SelectableItemBackground"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="@dimen/_18sdp"
                    android:layout_height="@dimen/_18sdp"
                    android:src="@drawable/ic_baseline_image_24" />

                <com.example.wallpapersapp.widgets.CustomRegularTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/setWallpaper"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_10ssp" />


            </LinearLayout>

            <LinearLayout
                android:id="@+id/lnShare"
                style="@style/SelectableItemBackground"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="@dimen/_18sdp"
                    android:layout_height="@dimen/_18sdp"
                    android:src="@drawable/ic_baseline_share_24" />

                <com.example.wallpapersapp.widgets.CustomRegularTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/share"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_10ssp" />


            </LinearLayout>

        </LinearLayout>


        <RelativeLayout
            android:id="@+id/rlProgress"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#B5000000"
            android:visibility="gone">

            <ProgressBar
                android:id="@+id/progress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true" />

            <com.example.wallpapersapp.widgets.CustomBoldTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/progress"
                android:layout_marginTop="@dimen/_5sdp"
                android:gravity="center"
                android:text="Saving wallpaper....."
                android:textColor="@color/white"
                android:textSize="@dimen/_12ssp" />

        </RelativeLayout>

    </RelativeLayout>

</layout>